<resources>
    <string name="app_name">Culture Quest</string>
    <string name="nav_button">Navigation Button</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_scan">Scan</string>

    <string name="firebase">FireBase</string>
    <string name="set">SET</string>
    <string name="get">GET</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="name_input">Name Input</string>
    <string name="greet_me">Greet Me</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="help_button_for_scan">Help button for scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_help_description">Take a picture of the artwork or monument you want by clicking on the scan icon to collect it and learn more about it!</string>
    <string name="understood">Understood</string>
    <string name="followTextButton">Follow</string>
    <string name="unfollowTextButton">Unfollow</string>
    <string name="settings">Settings</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="update_profile">Save</string>
    <string name="location">Location</string>
    <string name="like_count">Like Count</string>
    <string name="image_name">Image Name</string>
    <string name="Post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="spin">SPIN</string>
    <string name="stop">STOP</string>
    <string name="name_of_the_painting">Name of the painting</string>
    <string name="quizz_1">Quizz 1</string>
    <string name="start">Start</string>
    <string name="your_score_is">Your score is :</string>
    <string name="could_be">Could be :</string>
    <string name="unknown">\?</string>
    <string name="quit">QUIT</string>
    <string name="next">NEXT</string>
    <string name="disclaimer">Between each question, you can either cash out or all in for the next one</string>
    <string name="game_over">GAME OVER</string>
    <string name="you_lost_all_your_points">You lost all your points</string>
    <string name="back_to_the_tournament">Back to the tournament</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera_warning">You need to <b>allow camera permission</b> to use this feature. Go to your settings to allow it.</string>
    <string name="title_activity_location">LocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>