<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    >

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back_button"
         />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button"

        android:gravity="center"
        android:text="@string/quizz_1"
        android:layout_marginTop="35dp"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/blackTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/name_of_the_painting"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="45dp"
        android:layout_height="241dp"
        android:layout_below="@id/blackTextView"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="0dp"
        android:background="@drawable/round_corner">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="@drawable/round_corner"
            android:src="@drawable/joconde" />

    </FrameLayout>


    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>
