<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/back_button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:elevation="2dp"
        android:onClick="goBack"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Settings"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/back_button2"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="193dp"
        android:layout_height="158dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="159dp"
        android:onClick="selectProfilePicture"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/profile_pic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:text="@string/update_profile_picture"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/my_border"
        android:backgroundTint="@color/white"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic_text" />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="52dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="createProfile"
        android:text="@string/update_profile"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/log_out"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="createProfile"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/update_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="104dp"
        android:layout_height="78dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/logo_compact" />


</androidx.constraintlayout.widget.ConstraintLayout>